--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
                 </div>
             </div>
             
-             <div class="swiper-button-next">
-                <!-- <i class="uil uil-angle-double-right swiper-portfolio-icon"></i> -->
+             <!-- <div class="swiper-button-next">
+                 <i class="uil uil-angle-double-right swiper-portfolio-icon"></i> 
             </div>
             <div class="swiper-button-prev">
-                <!-- <i class="uil uil-angle-double-left swiper-portfolio-icon"></i> -->
-            </div>
+                <i class="uil uil-angle-double-left swiper-portfolio-icon"></i> 
+            </div> -->
             <div class="swiper-pagination"></div> 
         </div>
 
@@ -282,21 +282,143 @@
 
         <!-- PUBLICATIONS -->
     <section class="publication section" id="publications">
-        <h2 class="publications__container">Publications</h2>
-        <div class="portfolio__container container"> 
-        
+        <h2 class="section__title">Publications</h2>
+        <div class="publication__container container swiper"> 
+            <div class="swiper-wrapper">
+
+                <!-- PUBLICATION 1 -->
+                <div class="publication__content grid swiper-slide">
+                    <div class="publication__data text-box">
+                        <p class="publication__title"> 
+                            <i class="uil uil-cube"></i>
+                            AI | Quantum | Computing 
+                        </p>
+                        <p class="publication__description">
+                            Correlation-pattern-based continuous variable 
+                            entanglement detection through neural networks.
+                            <!-- smth to describe the project -->
+                        </p>
+                        <p class="publication__authors">
+                            X. Gao, M. Isoard, F. Sun, C.E. Lopetegui, Y. Xiang, V. Parigi, Q. He, M. Walschaers
+                        </p>
+                         <p class="publication__journal">
+                            <strong> <em>Physical Review Letters</em></strong> (2024)
+                        </p>
+                            <a href="#" class="btn button--flex button--small publication__button">
+                            To the paper
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- PUBLICATION 2 -->
+                <div class="publication__content grid swiper-slide">
+                    <div class="publication__data text-box">
+                        <p class="publication__title"> 
+                            <i class="uil uil-cube"></i>
+                            Quantum | Computing 
+                        </p>
+                        <p class="publication__description">
+                            Detection of mode-intrinsic quantum entanglement
+                            <!-- smth to describe the project -->
+                        </p>
+                        <p class="publication__authors">
+                            C.E. Lopetegui, M. Isoard, N. Treps, M. Walschaers
+                        </p>
+                            <p class="publication__journal">
+                            <strong> <em>Optica Quantum</em></strong> (2025)
+                        </p>
+                        <a href="#" class="btn button--flex button--small publication__button">
+                        To the paper
+                        <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="publication__content grid swiper-slide">
+                    <div class="publication__data text-box">
+                        <p class="publication__title"> 
+                            <i class="uil uil-cube"></i>
+                            Gravity | Quantum 
+                        </p>
+                        <p class="publication__description">
+                        Violation of Bell inequalities in an analog black hole
+                            <!-- smth to describe the project -->
+                        </p>
+                        <p class="publication__authors">
+                            G. Ciliberto, S. Emig, N. Pavloff, M. Isoard
+                        </p>
+                        <p class="publication__journal">
+                            <strong> <em>Physical Review A</em></strong> (2024)
+                        </p>
+                            <a href="#" class="btn button--flex button--small publication__button">
+                            To the paper
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- PUBLICATION 3 -->
+                <div class="publication__content grid swiper-slide">
+                    <div class="publication__data text-box">
+                        <p class="publication__title"> 
+                            <i class="uil uil-cube"></i>
+                            Turbulences | Communications 
+                        </p>
+                        <p class="publication__description">
+                        Highly transmitting modes of light in dynamic atmospheric turbulence
+                            <!-- smth to describe the project -->
+                        </p>
+                        <p class="publication__authors">
+                            D. Bachmann, M. Isoard, V. Shatokhin, G. Sorelli, N. Treps, A. Buchleitner
+                        </p>
+                        <p class="publication__journal">
+                            <strong> <em>Physical Review Letters</em></strong> (2023)
+                        </p>
+                            <a href="#" class="btn button--flex button--small publication__button">
+                            To the paper
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                 <!-- PUBLICATION 4 -->
+                <div class="publication__content grid swiper-slide">
+                    <div class="publication__data text-box">
+                        <p class="publication__title"> 
+                            <i class="uil uil-cube"></i>
+                            Maths | Quantum 
+                        </p>
+                        <p class="publication__description">
+                        Quantitative analysis of shock wave dynamics in a fluid of light
+                            <!-- smth to describe the project -->
+                        </p>
+                        <p class="publication__authors">
+                            T. Bienaimé, M. Isoard, Q. Fontaine, A. Bramati, A.M. Kamchatnov, Q. Glorieux, N. Pavloff
+                        </p>
+                        <p class="publication__journal">
+                            <strong> <em>Physical Review Letters</em></strong> (2021)
+                        </p>
+                            <a href="#" class="btn button--flex button--small publication__button">
+                            To the paper
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div> 
+
         </div>
 
-        <div class="home__scroll">
+        <!-- <div class="home__scroll">
             <a href="#contact" class="home__scroll-button button--flex">
                 <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
                 <span class="home__scroll-name"> Scroll down</span>
                 <i class="uil uil-arrow-down home__scroll-arrow"> </i>
             </a>
-        </div>
+        </div> -->
     </section>
 
-    <!-- CONTACT -->
+    <!-- CONTACT
     <section class="contact section" id="contact">
     <div class="container">
       <h2>Contact Me</h2>
@@ -306,7 +428,7 @@
         <textarea placeholder="Your Message" required></textarea>
         <button class="btn" type="submit">Send Message</button>
       </form>
-    </section>
+    </section> -->
 
 
 
