--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                 <!-- PUBLICATION 1 -->
                 <div class="publication__content grid swiper-slide">
-                    <div class="publication__data text-box">
+                    <div class="publication__data text-box quantum">
                         <p class="publication__title"> 
                             <i class="uil uil-cube"></i>
                             AI | Quantum | Computing 
@@ -312,7 +312,7 @@
                 </div>
                 <!-- PUBLICATION 2 -->
                 <div class="publication__content grid swiper-slide">
-                    <div class="publication__data text-box">
+                    <div class="publication__data text-box QC">
                         <p class="publication__title"> 
                             <i class="uil uil-cube"></i>
                             Quantum | Computing 
@@ -335,7 +335,7 @@
                 </div>
 
                 <div class="publication__content grid swiper-slide">
-                    <div class="publication__data text-box">
+                    <div class="publication__data text-box HR">
                         <p class="publication__title"> 
                             <i class="uil uil-cube"></i>
                             Gravity | Quantum 
@@ -359,7 +359,7 @@
 
                 <!-- PUBLICATION 3 -->
                 <div class="publication__content grid swiper-slide">
-                    <div class="publication__data text-box">
+                    <div class="publication__data text-box turb">
                         <p class="publication__title"> 
                             <i class="uil uil-cube"></i>
                             Turbulences | Communications 
@@ -383,7 +383,7 @@
 
                  <!-- PUBLICATION 4 -->
                 <div class="publication__content grid swiper-slide">
-                    <div class="publication__data text-box">
+                    <div class="publication__data text-box DSW">
                         <p class="publication__title"> 
                             <i class="uil uil-cube"></i>
                             Maths | Quantum 
