--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <i class="uil uil-globe nav__icon"></i> Publications
                 </a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
                 <a href="#contact" class="nav__link">
                     <i class="uil uil-message nav__icon"></i> Contact
                 </a>
-            </li>
+            </li> -->
         </ul>
         <!-- <i class="uil uil-times nav__close" id="nav-close"></i> -->
       </div>
