--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
                 <!-- PORTFOLIO 3 -->
                 <div class="portfolio__content grid swiper-slide">
-                    <img src="assets/img/AI_quantum_computing.png" alt="" class="portfolio__img">
+                    <img src="assets/img/AI_quantum_computing.jpg" alt="" class="portfolio__img">
                     <div class="portfolio__data text-box">
                         <h3 class="portfolio__title"> AI and Quantum Computing</h3>
                         <div class="portfolio__description">
@@ -324,6 +324,19 @@
         <!-- PUBLICATIONS -->
     <section class="publication section" id="publications">
         <h2 class="section__title">Publications</h2>
+        <div class="publication__links grid">
+            <a href="https://scholar.google.com/citations?user=8bsIOgoAAAAJ&hl=fr" class="pub__link">
+                <i class="uil uil-graduation-cap pub__icon"></i>
+                    &nbsp; Google scholar
+            </a>
+            <a href="https://orcid.org/0000-0001-5750-3942" class="pub__link">
+                <!-- <img class="img__links pub__link" src="assets/img/ID_logo.svg"> -->
+                    <img src="assets/img/ID_logo.svg" class="img-pub normal-pub">
+                    <img src="assets/img/ID_logo_hover.svg" class="img-pub hover-pub">
+                    <span id="ORCID"> ORCID</span>
+            </a>
+        </div> 
+        <span class="section__subtitle"> Higlighted publications </span>
         <div class="publication__container container swiper"> 
             <div class="swiper-wrapper">
 
