last update with new profile picture

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                             129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                            <image class="home__blob-img" x="0" y="-30" href="assets/img/about.png"/>
+                            <image class="home__blob-img" x="-10" y="0" href="assets/img/about.png"/>
                         </g>
                     </svg>
                 <!-- <img src="assets/img/about.jpg" alt="Profile picture"> -->
@@ -102,8 +102,8 @@
             <!-- Text (middle) -->
             <div class="home__data">
                 <h1>Mathieu Isoard</h1>
-                <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
-                <p> Machine learning | Data science | Medical imaging | DevOps | Physics </p>
+                <h2>PhD & Data Scientist</h2>
+                <p> Machine learning | Deep learning | Data science | Physics | Quantum computing </p>
                 <a href="#contact" class="btn">Contact Me <i class="uil uil-message"></i></a>
                 <a href="assets/files/contact.vcf" class="btn" target="_blank">Export my profile <i class="uil uil-user"></i></a>
                 <div class="home__scroll">
@@ -137,11 +137,18 @@
         <!-- <img src="assets/img/about.jpg" alt="About me picture"> -->
         <div class="about__content">
             <div class="text-box" id="about__text-1">
-                Former physicist, with a PhD in theoretical physics and applied maths,
-                I'm transitioning towards the world of data. With a long experience 
-                in data analysis, modeling, machine and deep learning, I love to 
+                <p> 
+                    Former physicist, with a PhD in theoretical physics and applied maths, 
+                I have built up considerable experience in research, ranging from 
+                black holes and quantum computing to communication through the 
+                atmosphere and hydrodynamics.
+                </p>
+                <p>
+                I'm now transitioning towards the world of data. With a deep understanding
+                of data analysis, modeling, machine and deep learning, I love to 
                 "give data a voice", explore patterns hidden from our eyes, and
                 transform them into intepretable and operational levers.
+                </p>
             </div> 
             <div class="text-box text2" id="about__text-2">
                 I am particularly fascinated by AI applications in healthcare, 
