last update with new profile picture

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
             <!-- Text (middle) -->
             <div class="home__data">
-                <h1>Mathieu Isoard</h1>
-                <h2>PhD & Data Scientist</h2>
-                <p> Machine learning | Deep learning | Data science | Physics | Quantum computing </p>
+                <h1>Mathieu Isoard, PhD</h1>
+                <!-- <h2>PhD</h2> -->
+                <p> Physicist - Data scientist | AI | Open to data science roles </p>
                 <a href="#contact" class="btn">Contact Me <i class="uil uil-message"></i></a>
                 <a href="assets/files/contact.vcf" class="btn" target="_blank">Export my profile <i class="uil uil-user"></i></a>
                 <div class="home__scroll">
