--- a/sport-ai.html
+++ b/sport-ai.html
@@ -448,11 +448,25 @@ Running 30min 5km"></textarea>
 					url: 'https://ai-trainingdashboard-production.up.railway.app/api/v1/demo/parse',
 					method: 'POST',
 					contentType: 'application/json',
+					dataType: 'json',
 					data: JSON.stringify({ raw_text: raw }),
-					timeout: 30000,
+					timeout: 60000,
 					success: function(data) {
 						demoAttempts--;
 						$('#demo-attempts').text(demoAttempts + ' attempt' + (demoAttempts !== 1 ? 's' : '') + ' remaining');
+						// Handle case where response is a string
+						if (typeof data === 'string') {
+							try { data = JSON.parse(data); } catch(e) {
+								console.error('Failed to parse response string:', e);
+							}
+						}
+						console.log('Parsed data type:', typeof data);
+						console.log('Data keys:', Object.keys(data || {}));
+						console.log('Has session?', !!data.session);
+						if (data.session) {
+							console.log('Session keys:', Object.keys(data.session));
+							console.log('Has blocks?', Array.isArray(data.session.blocks), data.session.blocks ? data.session.blocks.length : 0);
+						}
 						renderSession(data);
 					},
 					error: function(xhr) {
@@ -475,70 +489,24 @@ Running 30min 5km"></textarea>
 				});
 			}
 
-			// Normalize: if any value is a JSON string, parse it
-			function normalizeResponse(obj) {
-				if (!obj || typeof obj !== 'object') return obj;
-				// If session_data is a string, parse it and merge
-				if (typeof obj.session_data === 'string') {
-					try { obj = $.extend({}, obj, JSON.parse(obj.session_data)); } catch(e) {}
-				}
-				// If session is a string, parse it
-				if (typeof obj.session === 'string') {
-					try { obj.session = JSON.parse(obj.session); } catch(e) {}
-				}
-				return obj;
-			}
-
-			function findBlocks(raw) {
-				var obj = normalizeResponse(raw);
-				if (!obj || typeof obj !== 'object') return [];
-				// Direct: obj.blocks
-				if (Array.isArray(obj.blocks)) return obj.blocks;
-				// Nested: obj.session.blocks
-				if (obj.session && Array.isArray(obj.session.blocks)) return obj.session.blocks;
-				// Search all keys one level
-				for (var key in obj) {
-					if (obj[key] && typeof obj[key] === 'object' && Array.isArray(obj[key].blocks)) {
-						return obj[key].blocks;
-					}
-				}
-				return [];
-			}
-
-			function findSessionName(raw) {
-				var obj = normalizeResponse(raw);
-				if (!obj || typeof obj !== 'object') return '';
-				if (obj.title) return obj.title;
-				if (obj.session && obj.session.title) return obj.session.title;
-				if (obj.session_name) return obj.session_name;
-				if (obj.session && obj.session.session_name) return obj.session.session_name;
-				return '';
-			}
-
-			function findSessionNotes(raw) {
-				var obj = normalizeResponse(raw);
-				if (!obj || typeof obj !== 'object') return '';
-				if (obj.session_notes) return obj.session_notes;
-				if (obj.session && obj.session.session_notes) return obj.session.session_notes;
-				return '';
+			function getSession(data) {
+				return data && data.parsed_session && data.parsed_session.session ? data.parsed_session.session : null;
 			}
 
 			function renderSession(data) {
-				console.log('API response:', JSON.stringify(data, null, 2));
-				var blocks = findBlocks(data);
-				if (!blocks.length) {
-					$('#demo-output').html('<div class="demo-placeholder"><p style="color:#999;">No blocks detected. Check the browser console for the raw API response.</p></div>');
+				var session = getSession(data);
+				if (!session || !session.blocks || !session.blocks.length) {
+					$('#demo-output').html('<div class="demo-placeholder"><p style="color:#999;">No blocks detected. Try a different input.</p></div>');
 					return;
 				}
 
+				var blocks = session.blocks;
 				var html = '';
-				var sessionName = findSessionName(data);
-				if (sessionName && sessionName !== 'None' && sessionName !== 'null') {
-					html += '<div class="demo-session-title">' + escHtml(sessionName) + '</div>';
+				if (session.title) {
+					html += '<div class="demo-session-title">' + escHtml(session.title) + '</div>';
 				}
-				var notes = findSessionNotes(data);
-				if (notes && notes !== 'null') {
-					html += '<div style="font-size:0.85em; color:#6b7280; font-style:italic; margin-bottom:1em; padding:0.5em 0.75em; background:#fffbeb; border-radius:8px;">' + escHtml(notes) + '</div>';
+				if (session.session_notes) {
+					html += '<div style="font-size:0.85em; color:#6b7280; font-style:italic; margin-bottom:1em; padding:0.5em 0.75em; background:#fffbeb; border-radius:8px;">' + escHtml(session.session_notes) + '</div>';
 				}
 
 				blocks.forEach(function(block, bi) {
