new website style

--- a/sport-ai.html
+++ b/sport-ai.html
@@ -582,7 +582,7 @@
 
 			function showRateLimitCta() {
 				$('#demo-error').hide();
-				$('#demo-cta-text').html('Enjoyed the demo? Create a free account on <strong>FitBoard</strong> to parse all your workout sessions, track your progress, and more. Use it on desktop or add it as a native app on your phone!');
+				$('#demo-cta-text').html('Youhave reached the demo rate limit. Enjoyed it? Create a free account on <strong>FitBoard</strong> to parse all your workout sessions, track your progress, and more. Use it on desktop or add it as a native app on your phone!');
 				$('#demo-parse-btn').prop('disabled', true).addClass('disabled');
 			}
 
