new website style

--- a/sport-ai.html
+++ b/sport-ai.html
@@ -147,7 +147,7 @@
 
 								<!-- Always-visible CTA -->
 								<div id="demo-cta" class="demo-cta-card" style="margin-top: 2em;">
-									<p id="demo-cta-text">Want to try it for real with your workout sessions? Follow the link below and create your account!</p>
+									<p id="demo-cta-text">Want to try it for real with your workout sessions? Follow the link below and create your account. Use it on desktop or add it as a native app on your phone!</p>
 									<ul class="actions">
 										<li><a href="https://ai-training-dashboard.vercel.app" target="_blank" class="button primary small">Try FitBoard</a></li>
 									</ul>
