email form updated

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 									</div>
 									<div class="col-6 col-12-medium">
 										<h3>Send a Message</h3>
-										<form method="post" action="https://formspree.io/f/placeholder">
+										<form method="post" action="https://formspree.io/f/mdalewnv">
 											<div class="row gtr-uniform">
 												<div class="col-12">
 													<input type="text" name="name" id="name" value="" placeholder="Your Name" />
@@ -109,7 +109,7 @@
 												</div>
 											</div>
 										</form>
-										<p><small><em>Note: The contact form requires a backend service like <a href="https://formspree.io" target="_blank">Formspree</a> to function. Update the form action URL to activate it.</em></small></p>
+										<!-- <p><small><em>Note: The contact form requires a backend service like <a href="https://formspree.io" target="_blank">Formspree</a> to function. Update the form action URL to activate it.</em></small></p> -->
 									</div>
 								</div>
 
