--- a/projects.html
+++ b/projects.html
@@ -230,6 +230,14 @@
 						// Toggle tab content
 						$('.tab-content').removeClass('active');
 						$('#tab-' + target).addClass('active');
+
+						// Scroll to the section (offset for fixed header)
+						var section = document.getElementById('tab-' + target);
+						if (section) {
+							var headerHeight = document.getElementById('header') ? document.getElementById('header').offsetHeight : 0;
+							var top = section.getBoundingClientRect().top + window.pageYOffset - headerHeight - 20;
+							window.scrollTo({ top: top, behavior: 'smooth' });
+						}
 					});
 				});
 			</script>
